Native audio test

--- a/package.json
+++ b/package.json
@@ -1,22 +1,63 @@
 {
-  "name": "capacitor-camera-preview-test",
+  "name": "capacitor-native-audio-test",
   "private": true,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "info": "npm-scripts-info",
+    "?info": "Display usage information about the npm run scripts.",
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "?dev": "Start the app in development mode with live reload.\nFor more options: https://ionicframework.com/docs/cli/commands/serve",
     "preview": "vite preview",
-    "test:e2e": "cypress run",
+    "?preview": "Start the app in development mode with live reload and preview mode.\nFor more options: https://ionicframework.com/docs/cli/commands/serve",
+    "serve": "vue-cli-service serve",
+    "?serve": "Run the app in the browser for development.\nFor more options: https://ionicframework.com/docs/cli/commands/serve",
+    "build": "vue-tsc && vite build",
+    "?build": "Build the web assets for production. Deploys to `/dist`.\nFor more options: https://ionicframework.com/docs/cli/commands/build",
     "test:unit": "vitest",
-    "lint": "eslint ."
+    "?test:unit": "Run web layer unit tests using Jest.\nFor more options: https://cli.vuejs.org/core-plugins/unit-jest.html#injected-commands",
+    "test:e2e": "cypress run",
+    "?test:e2e": "Run web layer e2e tests using Cypress.\nFor more options: https://cli.vuejs.org/core-plugins/e2e-cypress.html#injected-commands",
+    "lint": "eslint .",
+    "?lint": "Lint the web layer code.\nFor more options: https://cli.vuejs.org/core-plugins/eslint.html",
+    "cap:build": "ionic cap copy",
+    "?cap:build": "Build and deploys the web application to the native platform projects.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-build",
+    "cap:build:android": "set NODE_ENV=development && export NODE_ENV=development && ionic cap copy android",
+    "?cap:build:android": "Build and deploys the web application to the native Android platform project.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-build",
+    "cap:build:ios": "set NODE_ENV=development && export NODE_ENV=development && ionic cap copy ios",
+    "?cap:build:ios": "Build and deploys the web application to the native iOS platform project.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-build",
+    "cap:update": "ionic cap update",
+    "?cap:update": "Update native platforms and dependencies with any pending plugin changes.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-update",
+    "cap:update:android": "ionic cap update android",
+    "?cap:update:android": "Update native Android platform and dependencies with any pending plugin changes.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-update",
+    "cap:update:ios": "ionic cap update ios",
+    "?cap:update:ios": "Update native iOS platform and dependencies with any pending plugin changes.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-update",
+    "list-devices:android": "ionic cap open android --list",
+    "?list-devices:android": "List available Android devices/emulators for use as run targets.",
+    "list-devices:ios": "ionic cap open ios --list",
+    "?list-devices:ios": "List available iOS devices/simulators for use as run targets.",
+    "open:android": "ionic cap open android",
+    "?open:android": "Open the native Android project in Android Studio",
+    "open:ios": "ionic cap open ios",
+    "?open:ios": "Open the native iOS project in Xcode",
+    "run:android": "npm run cap:build && ionic cap run android",
+    "?run:android": "Run the app on an Android device/emulator. Specify --target to choose a specific run target.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-run",
+    "run:ios": "npm run cap:build && ionic cap run ios",
+    "?run:ios": "Run the app on an iOS device/simulator. Specify --target to choose a specific run target.\nFor more options: https://ionicframework.com/docs/cli/commands/capacitor-run",
+    "run:android:livereload": "npm run cap:build && ionic cap run android -l --external",
+    "?run:android:livereload": "Run the app on an Android device/emulator with live reload functionality.",
+    "run:ios:livereload": "npm run cap:build && ionic cap run ios -l --external",
+    "?run:ios:livereload": "Run the app on an iOS device/simulator with live reload functionality."
   },
   "dependencies": {
+    "@capacitor/android": "^5.7.0",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.0",
     "@capacitor/haptics": "5.0.7",
+    "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
+    "@capgo/native-audio": "file:../capacitor-native-audio",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "ionicons": "^7.0.0",
@@ -33,6 +74,8 @@
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
+    "npm-scripts-info": "^0.3.9",
+    "sass": "^1.70.0",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
     "vite": "^5.0.0",
